<?xml version="1.0" encoding="utf-8"?>
<!-- ScrollView Vertical -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScrollViewBG"
    tools:context="com.example.android.musicstructureapp.TopTenActivity">

    <!-- Main Layout - Linear Vertical -->
    <LinearLayout
        style="@style/LinearLayoutMain" >

        <!-- Top Songs Title -->
        <TextView
            android:text="@string/top_ten_songs"
            style="@style/TopTenTitles" />

        <!-- Horizontal ScrollView for top songs-->
        <HorizontalScrollView
            style="@style/HorizontalScrollView" >

            <!-- Horizontal LinearLayout for top songs-->
            <LinearLayout
                style="@style/HorizontalLinearLayout" >

                <!-- Images for Top Songs -->
                <ImageView
                    android:id="@+id/eminem"
                    android:src="@drawable/eminem"
                    style="@style/TopTenImages"
                    android:contentDescription="@string/song_image"
                    />

                <ImageView
                    android:id="@+id/alpha_blondy"
                    android:src="@drawable/alpha_blondy"
                    style="@style/TopTenImages"
                    android:contentDescription="@string/song_image"
                    />

                <ImageView
                    android:id="@+id/adele"
                    android:src="@drawable/adele100"
                    style="@style/TopTenImages"
                    android:contentDescription="@string/song_image"
                    />

                <ImageView
                    android:id="@+id/bob_marley"
                    android:src="@drawable/bobmarley100"
                    style="@style/TopTenImages"
                    android:contentDescription="@string/song_image"
                    />

                <ImageView
                    android:id="@+id/eminem1"
                    android:src="@drawable/eminem"
                    style="@style/TopTenImages"
                    android:contentDescription="@string/song_image"
                    />

            </LinearLayout>
        </HorizontalScrollView>

        <!-- Top Albums Title -->
        <TextView
            android:text="@string/top_ten_albums"
            style="@style/TopTenTitles"
            />

        <!-- Horizontal ScrollView for top albums -->
        <HorizontalScrollView
            style="@style/HorizontalScrollView" >

            <!-- Horizontal LinearLayout for top albums -->
            <LinearLayout
                style="@style/HorizontalLinearLayout" >

                <!-- Images for Top Albums -->
                <ImageView
                    android:src="@drawable/adele100"
                    style="@style/TopTenImages"
                    android:contentDescription="@string/album_image"
                    />

                <ImageView
                    android:src="@drawable/eminem"
                    style="@style/TopTenImages"
                    android:contentDescription="@string/album_image"
                    />

                <ImageView
                    android:src="@drawable/bobmarley100"
                    style="@style/TopTenImages"
                    android:contentDescription="@string/album_image"
                    />

                <ImageView
                    android:src="@drawable/alpha_blondy"
                    style="@style/TopTenImages"
                    android:contentDescription="@string/album_image"
                    />

                <ImageView
                    android:src="@drawable/adele100"
                    style="@style/TopTenImages"
                    android:contentDescription="@string/album_image"
                    />

            </LinearLayout>
        </HorizontalScrollView>

        <!-- Top Artists Title -->
        <TextView
            android:text="@string/top_ten_artists"
            style="@style/TopTenTitles"
            />

        <!-- Horizontal ScrollView for top artists-->
        <HorizontalScrollView
            style="@style/HorizontalScrollView" >

            <!-- Horizontal LinearLayout for top artists -->
            <LinearLayout
                style="@style/HorizontalLinearLayout" >

                <!-- Images for Top Artists -->
                <ImageView
                    android:src="@drawable/bobmarley100"
                    style="@style/TopTenImages"
                    android:contentDescription="@string/artist_image"
                    />

                <ImageView
                    android:src="@drawable/eminem"
                    style="@style/TopTenImages"
                    android:contentDescription="@string/artist_image"
                    />

                <ImageView
                    android:src="@drawable/adele100"
                    style="@style/TopTenImages"
                    android:contentDescription="@string/artist_image"
                    />

                <ImageView
                    android:src="@drawable/alpha_blondy"
                    style="@style/TopTenImages"
                    android:contentDescription="@string/artist_image"
                    />

                <ImageView
                    android:src="@drawable/bobmarley100"
                    style="@style/TopTenImages"
                    android:contentDescription="@string/artist_image"
                    />

            </LinearLayout>
        </HorizontalScrollView>


        <!-- Explanation Text for the Activity -->
        <TextView
            style="@style/ExplanationText"
            android:text="@string/top_ten_explanation"
            />

    </LinearLayout>


</ScrollView>
