<?xml version="1.0" encoding="utf-8"?><!-- ScrollView Vertical -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScrollViewBG"
    tools:context="com.example.android.musicstructureapp.MyPlaylist">

    <!-- Using Coordinator Layout only for Floating Action Button -->
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Main Layout - Linear Vertical -->
        <LinearLayout style="@style/LinearLayoutMain">

            <!-- Recent Playlist Title (TextView) -->
            <TextView
                style="@style/TopTenTitles"
                android:text="@string/recent_playlist" />

            <!-- Nested Relative Layout - Container for Recent Playlist -->
            <RelativeLayout style="@style/RelativePlaylist">

                <!-- ImageView for Recent Playlist with scaleType centerCrop-->
                <ImageView
                    android:id="@+id/floating_anchor"
                    style="@style/ImageRecentPlaylist"
                    android:contentDescription="@string/song_image"
                    android:src="@drawable/reggae_playlist" />

                <!-- ImageView for Play Icon (White Icon png)-->
                <ImageView
                    android:id="@+id/play_icon_recent"
                    style="@style/RecentPlayIcon"
                    android:contentDescription="@string/play_icon"
                    android:src="@drawable/ic_play_circle_outline_white_24dp" />

                <!-- ImageView for Recent Playlist -->
                <TextView
                    android:id="@+id/playlist_title"
                    style="@style/TextRecentPlaylist"
                    android:layout_below="@id/play_icon_recent"
                    android:text="@string/reggae" />

            </RelativeLayout>

            <!-- Search bar for PlayLists -->
            <EditText
                android:id="@+id/search_songs"
                style="@style/SearchStyle"
                android:hint="@string/search_playlists" />

            <!-- Other Playlists Title (TextView) -->
            <TextView
                style="@style/TopTenTitles"
                android:text="@string/other_playlists" />

            <!-- Horizontal ScrollView for Other Playlists -->
            <HorizontalScrollView style="@style/HorizontalScrollView">

                <!-- Horizontal LinearLayout for Other Playlists -->
                <LinearLayout style="@style/HorizontalLinearLayout">

                    <!-- Nested Relative Layout with 2 ImageViews -->
                    <RelativeLayout style="@style/RelativePlaylist">

                        <!-- Image for 1st Playlist in Other Playlists -->
                        <ImageView
                            style="@style/TopTenImages"
                            android:contentDescription="@string/song_image"
                            android:src="@drawable/eminem" />

                        <!-- ImageView for Play Icon (White Icon)-->
                        <ImageView
                            style="@style/PlaylistsPlayIcon"
                            android:contentDescription="@string/play_icon"
                            android:src="@drawable/ic_play_circle_outline_white_24dp" />

                    </RelativeLayout>

                    <!-- Nested Relative Layout with 2 ImageViews -->
                    <RelativeLayout style="@style/RelativePlaylist">

                        <!-- Image for 2nd Playlist in Other Playlists -->
                        <ImageView
                            style="@style/TopTenImages"
                            android:contentDescription="@string/song_image"
                            android:src="@drawable/bobmarley100" />

                        <!-- ImageView for Play Icon (White Icon)-->
                        <ImageView
                            style="@style/PlaylistsPlayIcon"
                            android:contentDescription="@string/play_icon"
                            android:src="@drawable/ic_play_circle_outline_white_24dp" />

                    </RelativeLayout>

                    <!-- Nested Relative Layout with 2 ImageViews -->
                    <RelativeLayout style="@style/RelativePlaylist">

                        <!-- Image for 3rd Playlist in Other Playlists -->
                        <ImageView
                            style="@style/TopTenImages"
                            android:contentDescription="@string/song_image"
                            android:src="@drawable/adele100" />

                        <!-- ImageView for Play Icon (White Icon)-->
                        <ImageView
                            style="@style/PlaylistsPlayIcon"
                            android:contentDescription="@string/play_icon"
                            android:src="@drawable/ic_play_circle_outline_white_24dp" />

                    </RelativeLayout>

                    <!-- Nested Relative Layout with 2 ImageViews -->
                    <RelativeLayout style="@style/RelativePlaylist">

                        <!-- Image for 4th Playlist in Other Playlists -->
                        <ImageView
                            style="@style/TopTenImages"
                            android:contentDescription="@string/song_image"
                            android:src="@drawable/alpha_blondy" />

                        <!-- ImageView for Play Icon (White Icon)-->
                        <ImageView
                            style="@style/PlaylistsPlayIcon"
                            android:contentDescription="@string/play_icon"
                            android:src="@drawable/ic_play_circle_outline_white_24dp" />

                    </RelativeLayout>

                    <!-- Nested Relative Layout with 2 ImageViews -->
                    <RelativeLayout style="@style/RelativePlaylist">

                        <!-- Image for 5th Playlist in Other Playlists -->
                        <ImageView
                            style="@style/TopTenImages"
                            android:contentDescription="@string/song_image"
                            android:src="@drawable/eminem" />

                        <!-- ImageView for Play Icon (White Icon)-->
                        <ImageView
                            style="@style/PlaylistsPlayIcon"
                            android:contentDescription="@string/play_icon"
                            android:src="@drawable/ic_play_circle_outline_white_24dp" />

                    </RelativeLayout>

                </LinearLayout>
            </HorizontalScrollView>

            <!-- Explanation Text for the Activity -->
            <TextView
                style="@style/ExplanationText"
                android:text="@string/my_playlist_explanation" />

        </LinearLayout>

        <!-- Floating Action Button to add new playlists -->
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            style="@style/FloatingActionButton"
            android:src="@drawable/ic_add_white_24dp"
            app:backgroundTint="#FF0000"
            app:layout_anchor="@id/floating_anchor"
            app:layout_anchorGravity="bottom|right|end"
            app:rippleColor="#FFF" />

    </android.support.design.widget.CoordinatorLayout>

</ScrollView>
