<?xml version="1.0" encoding="utf-8"?><!-- ScrollView Vertical -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScrollViewBG"
    tools:context="com.example.android.musicstructureapp.ListenSongActivity">

    <!-- Main Layout - Linear Vertical -->
    <LinearLayout style="@style/LinearLayoutMain">

        <!-- Song Title (TextView) -->
        <TextView
            style="@style/TopTenTitles"
            android:text="@string/song_title" />

        <!-- Relative Layout - Container for the "Media Player" -->
        <RelativeLayout style="@style/RelativePlaylist">

            <!-- ImageView for Song Image with scaleType:centerCrop -->
            <ImageView
                android:id="@+id/song_image"
                style="@style/ImageRecentPlaylist"
                android:contentDescription="@string/song_image"
                android:src="@drawable/listen_song_image" />

            <!-- Progress Bar for Song Duration -->
            <ProgressBar
                android:id="@+id/progress_bar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/colorWhite"
                android:indeterminate="false"
                android:max="100"
                android:progress="10"
                android:progressTint="@color/colorPink" />

            <!-- ImageView for Volume Icon -->
            <ImageView
                android:id="@+id/volume"
                style="@style/VolumeIcon"
                android:contentDescription="@string/volume_icon"
                android:src="@drawable/ic_volume_up_white_24dp" />

            <!-- Seek Bar for adjusting the Volume -->
            <SeekBar
                android:id="@+id/seek_bar"
                style="@style/SeekBarStyle" />

        </RelativeLayout>

        <!-- Horizontal Linear Layout - container for skip & play icons -->
        <LinearLayout style="@style/HorizontalLinearLayout">

            <!-- Image for skip previous icon -->
            <ImageView
                android:id="@+id/skip_previous"
                style="@style/SkipPlayIcon"
                android:contentDescription="@string/skip_icon"
                android:src="@drawable/ic_skip_previous_white_24dp" />

            <!-- Image for Play icon -->
            <ImageView
                android:id="@+id/play_icon"
                style="@style/SkipPlayIcon"
                android:contentDescription="@string/play_icon"
                android:src="@drawable/ic_play_arrow_white_24dp" />

            <!-- Image for skip next icon -->
            <ImageView
                style="@style/SkipPlayIcon"
                android:contentDescription="@string/skip_icon"
                android:src="@drawable/ic_skip_next_white_24dp" />

        </LinearLayout>

        <!-- Next Songs Title (TextView) -->
        <TextView
            style="@style/TopTenTitles"
            android:text="@string/next_song" />

        <!-- Horizontal ScrollView for next songs -->
        <HorizontalScrollView style="@style/HorizontalScrollView">

            <!-- Horizontal Linear Layout for next songs -->
            <LinearLayout style="@style/HorizontalLinearLayout">

                <!-- Nested Relative Layout with 2 ImageViews (1st song) -->
                <RelativeLayout style="@style/RelativePlaylist">

                    <!-- Image for 1st Playlist in Next Songs -->
                    <ImageView
                        style="@style/TopTenImages"
                        android:contentDescription="@string/song_image"
                        android:src="@drawable/eminem" />

                    <!-- ImageView for Play Icon (White Icon)-->
                    <ImageView
                        style="@style/PlaylistsPlayIcon"
                        android:contentDescription="@string/play_icon"
                        android:src="@drawable/ic_play_circle_outline_white_24dp" />

                </RelativeLayout>

                <!-- Nested Relative Layout with 2 ImageViews (2nd song) -->
                <RelativeLayout style="@style/RelativePlaylist">

                    <!-- Image for 1st Playlist in Next Songs -->
                    <ImageView
                        style="@style/TopTenImages"
                        android:contentDescription="@string/song_image"
                        android:src="@drawable/bobmarley100" />

                    <!-- ImageView for Play Icon (White Icon)-->
                    <ImageView
                        style="@style/PlaylistsPlayIcon"
                        android:contentDescription="@string/play_icon"
                        android:src="@drawable/ic_play_circle_outline_white_24dp" />

                </RelativeLayout>

                <!-- Nested Relative Layout with 2 ImageViews (3rd song) -->
                <RelativeLayout style="@style/RelativePlaylist">

                    <!-- Image for 1st Playlist in Next Songs -->
                    <ImageView
                        style="@style/TopTenImages"
                        android:contentDescription="@string/song_image"
                        android:src="@drawable/adele100" />

                    <!-- ImageView for Play Icon (White Icon)-->
                    <ImageView
                        style="@style/PlaylistsPlayIcon"
                        android:contentDescription="@string/play_icon"
                        android:src="@drawable/ic_play_circle_outline_white_24dp" />

                </RelativeLayout>

                <!-- Nested Relative Layout with 2 ImageViews (4th song) -->
                <RelativeLayout style="@style/RelativePlaylist">

                    <!-- Image for 1st Playlist in Next Songs -->
                    <ImageView
                        style="@style/TopTenImages"
                        android:contentDescription="@string/song_image"
                        android:src="@drawable/alpha_blondy" />

                    <!-- ImageView for Play Icon (White Icon)-->
                    <ImageView
                        style="@style/PlaylistsPlayIcon"
                        android:contentDescription="@string/play_icon"
                        android:src="@drawable/ic_play_circle_outline_white_24dp" />

                </RelativeLayout>

                <!-- Nested Relative Layout with 2 ImageViews (5th song) -->
                <RelativeLayout style="@style/RelativePlaylist">

                    <!-- Image for 1st Playlist in Next Songs -->
                    <ImageView
                        style="@style/TopTenImages"
                        android:contentDescription="@string/song_image"
                        android:src="@drawable/eminem" />

                    <!-- ImageView for Play Icon (White Icon)-->
                    <ImageView
                        style="@style/PlaylistsPlayIcon"
                        android:contentDescription="@string/play_icon"
                        android:src="@drawable/ic_play_circle_outline_white_24dp" />

                </RelativeLayout>


            </LinearLayout>
        </HorizontalScrollView>

        <!-- Explanation Text for the Activity -->
        <TextView
            style="@style/ExplanationText"
            android:text="@string/listen_song_explanation" />

    </LinearLayout>
</ScrollView>
