<?xml version="1.0" encoding="utf-8"?><!-- ScrollView Vertical -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScrollViewBG"
    tools:context="com.example.android.musicstructureapp.SongsActivity">

    <!-- Main Layout - Linear Vertical -->
    <LinearLayout style="@style/LinearLayoutMain">

        <!-- Search bar for Songs -->
        <EditText
            android:id="@+id/search_songs"
            style="@style/SearchStyle"
            android:hint="@string/search_songs" />

        <!-- A CardView that contains ImageView and 2 TextView (1st Artist)-->
        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_song"
            style="@style/CardsStyle"
            card_view:cardCornerRadius="@dimen/cardCornerRadius">

            <!-- Layout of the card -->
            <RelativeLayout style="@style/RelativeLayout">

                <!-- Artist Image -->
                <ImageView
                    android:id="@+id/song_photo"
                    style="@style/CardImage"
                    android:contentDescription="@string/song_image"
                    android:src="@drawable/alone_mello80" />

                <!-- Artist Name -->
                <TextView
                    android:id="@+id/song_title"
                    style="@style/CardTitle"
                    android:layout_toEndOf="@id/song_photo"
                    android:text="@string/song_title" />

                <!-- Artist Description -->
                <TextView
                    android:id="@+id/song_description"
                    style="@style/CardDescription"
                    android:layout_below="@+id/song_title"
                    android:layout_toEndOf="@id/song_photo"
                    android:text="@string/song_description" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <!-- Horizontal Line between CardViews -->
        <View style="@style/ViewsLines" />

        <!-- A CardView that contains ImageView and 2 TextView (2nd artist) -->
        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_song1"
            style="@style/CardsStyle">

            <!-- Layout of the card -->
            <RelativeLayout style="@style/RelativeLayout">

                <!-- Artist Image -->
                <ImageView
                    android:id="@+id/song1_photo"
                    style="@style/CardImage"
                    android:contentDescription="@string/song_image"
                    android:src="@drawable/meantto_be_arc_north80" />

                <!-- Artist Name -->
                <TextView
                    android:id="@+id/song1_title"
                    style="@style/CardTitle"
                    android:layout_toEndOf="@id/song1_photo"
                    android:text="@string/song_title" />

                <!-- Artist Description -->
                <TextView
                    android:id="@+id/song1_description"
                    style="@style/CardDescription"
                    android:layout_below="@+id/song1_title"
                    android:layout_toEndOf="@id/song1_photo"
                    android:text="@string/song_description" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <!-- Horizontal Line between CardViews -->
        <View style="@style/ViewsLines" />

        <!-- A CardView that contains ImageView and 2 TextView (3rd artist) -->
        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_song2"
            style="@style/CardsStyle">

            <!-- Layout of the card -->
            <RelativeLayout style="@style/RelativeLayout">

                <!-- Artist Image -->
                <ImageView
                    android:id="@+id/song2_photo"
                    style="@style/CardImage"
                    android:contentDescription="@string/song_image"
                    android:src="@drawable/not_afraid_eminem80" />

                <!-- Artist Name -->
                <TextView
                    android:id="@+id/song2_title"
                    style="@style/CardTitle"
                    android:layout_toEndOf="@id/song2_photo"
                    android:text="@string/song_title" />

                <!-- Artist Description -->
                <TextView
                    android:id="@+id/song2_description"
                    style="@style/CardDescription"
                    android:layout_below="@+id/song2_title"
                    android:layout_toEndOf="@id/song2_photo"
                    android:text="@string/song_description" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <!-- Horizontal Line between CardViews -->
        <View style="@style/ViewsLines" />

        <!-- A CardView that contains ImageView and 2 TextView (4th artist) -->
        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_song3"
            style="@style/CardsStyle">

            <!-- Layout of the card -->
            <RelativeLayout style="@style/RelativeLayout">

                <!-- Artist Image -->
                <ImageView
                    android:id="@+id/song3_photo"
                    style="@style/CardImage"
                    android:contentDescription="@string/artist_image"
                    android:src="@drawable/iknowaplace80" />

                <!-- Artist Name -->
                <TextView
                    android:id="@+id/song3_title"
                    style="@style/CardTitle"
                    android:layout_toEndOf="@id/song3_photo"
                    android:text="@string/song_title" />

                <!-- Artist Description -->
                <TextView
                    android:id="@+id/song3_description"
                    style="@style/CardDescription"
                    android:layout_below="@+id/song3_title"
                    android:layout_toEndOf="@id/song3_photo"
                    android:text="@string/song_description" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <!-- Explanation Text for the Activity -->
        <TextView
            style="@style/ExplanationText"
            android:text="@string/songs_explanation" />

    </LinearLayout>
</ScrollView>
